# tires

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: CI.yaml  pypi.yaml  ruff.yaml
examples/: manifest.toml  short-manifest.toml
src/tires/: __init__.py
